--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "js13k-starter-2022",
+  "name": "js13k-vocoder-puccini",
   "version": "0.0.1",
   "license": "MIT",
   "main": "src/index.ts",
@@ -16,22 +16,22 @@
     "@types/clean-css": "4.2.6",
     "@types/google-closure-compiler": "0.0.19",
     "@types/html-minifier-terser": "7.0.0",
-    "@typescript-eslint/eslint-plugin": "5.49.0",
-    "@typescript-eslint/parser": "5.49.0",
+    "@typescript-eslint/eslint-plugin": "5.52.0",
+    "@typescript-eslint/parser": "5.52.0",
     "advzip-bin": "2.0.0",
     "clean-css": "5.3.2",
-    "google-closure-compiler": "20230103.0.0",
+    "google-closure-compiler": "20230206.0.0",
     "ect-bin": "1.4.1",
-    "eslint": "8.32.0",
+    "eslint": "8.34.0",
     "eslint-config-prettier": "8.6.0",
     "eslint-plugin-prettier": "4.2.1",
     "html-minifier-terser": "7.1.0",
-    "prettier": "2.8.3",
+    "prettier": "2.8.4",
     "roadroller": "2.1.0",
     "ts-node": "10.9.1",
-    "tslib": "2.4.1",
-    "typescript": "4.9.4",
-    "vite": "4.0.4"
+    "tslib": "2.5.0",
+    "typescript": "4.9.5",
+    "vite": "4.1.2"
   },
   "prettier": {
     "printWidth": 120,
