--- a/package.json
+++ b/package.json
@@ -2,36 +2,28 @@
   "name": "js13k-vocoder-puccini",
   "version": "0.0.1",
   "license": "MIT",
+  "type": "module",
   "main": "src/index.ts",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint .",
-    "optimize": "node optimize.js"
+    "lint": "eslint ."
   },
   "devDependencies": {
-    "@ampproject/rollup-plugin-closure-compiler": "0.27.0",
     "@rollup/plugin-typescript": "11.0.0",
-    "@types/clean-css": "4.2.6",
-    "@types/google-closure-compiler": "0.0.19",
-    "@types/html-minifier-terser": "7.0.0",
-    "@typescript-eslint/eslint-plugin": "5.52.0",
-    "@typescript-eslint/parser": "5.52.0",
-    "advzip-bin": "2.0.0",
-    "clean-css": "5.3.2",
-    "google-closure-compiler": "20230206.0.0",
-    "ect-bin": "1.4.1",
+    "@typescript-eslint/eslint-plugin": "5.53.0",
+    "@typescript-eslint/parser": "5.53.0",
     "eslint": "8.34.0",
     "eslint-config-prettier": "8.6.0",
     "eslint-plugin-prettier": "4.2.1",
-    "html-minifier-terser": "7.1.0",
+    "js13k-vite-plugins": "0.0.2",
     "prettier": "2.8.4",
-    "roadroller": "2.1.0",
+    "terser": "5.16.4",
     "ts-node": "10.9.1",
     "tslib": "2.5.0",
     "typescript": "4.9.5",
-    "vite": "4.1.2"
+    "vite": "4.1.3"
   },
   "prettier": {
     "printWidth": 120,
